Fixed missing image for some videos and stretch images

--- a/css/youtube_audio.css
+++ b/css/youtube_audio.css
@@ -22,9 +22,11 @@
 
 .youtube_thumbnail_div {
     position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .youtube_thumbnail {
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
 }
